# ifc-parser-wasm

./: Cargo.toml  errors.txt  surface_help.txt
src/: lib.rs  shader.wgsl  viewer.rs
