[package]
name = "ifc-parser-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bimifc-parser = "0.2.0"
bimifc-model = "0.2.0"
bimifc-geometry = "0.2.0"
console_error_panic_hook = "0.1.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
wasm-bindgen = "0.2.114"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
  "Document", "Window", "HtmlCanvasElement", 
  "MouseEvent", "WheelEvent", "console"
] }
wgpu = "29.0.1"
glam = "0.29.0"
bytemuck = { version = "1.19.0", features = ["derive"] }
pollster = "0.3.0"
nalgebra = "0.33"

